--- a/style.css
+++ b/style.css
@@ -34,6 +34,10 @@
     font-size: medium;
 }
 
+.risultato h1{
+    margin-top: 0px;
+}
+
 .bottone{
     background-color: #cecece;
     height: 50px;
